fable/test/valid/read_format.f
      program prog
      read(5, '(i3)') num
      write(6, '(i3)') num + 1
      end
