fable/test/syntax_error/bad_format_2.f
      program prog
      write(6, '(') num
      end
